# lazy-interpreted-language

./: .gitignore  CMakeLists.txt  README.md
examples/: 1-hello-world.lil  2-functions.lil  3-conditional.lil  4-recursion.lil  5-returning-function.lil  6-laziness.lil  7-error.lil
include/: AST.hpp  Common.hpp  Context.hpp  Executor.hpp  Mark.hpp  Node.hpp  Parser.hpp  PrintVisitor.hpp  SemanticAnalyser.hpp  Stream.hpp  Symbol.hpp  Token.hpp  Tokenizer.hpp  TypeChecker.hpp  Value.h  Visitor.hpp
src/: Common.cpp  Context.cpp  Executor.cpp  Parser.cpp  PrintVisitor.cpp  SemanticAnalyser.cpp  Stream.cpp  Symbol.cpp  Tokenizer.cpp  TypeChecker.cpp  Value.cpp  main.cpp
tests/: ExecutorTests.cpp  ParserTests.cpp  PrintVisitorTests.cpp  SemanticAnalyserTests.cpp  TokenizerTests.cpp  main_test.cpp
